# internal/data/ent/migrate/schema.go
@@ -3,26 +3,37 @@
 package migrate
 
 import (
+	"entgo.io/ent/dialect/entsql"
 	"entgo.io/ent/dialect/sql/schema"
 	"entgo.io/ent/schema/field"
 )
 
 var (
-	// AuthorizesColumns holds the columns for the "authorizes" table.
-	AuthorizesColumns = []*schema.Column{
+	// AuthorizeColumns holds the columns for the "authorize" table.
+	AuthorizeColumns = []*schema.Column{
 		{Name: "id", Type: field.TypeInt, Increment: true},
+		{Name: "client_id", Type: field.TypeString},
+		{Name: "client_secret", Type: field.TypeString},
+		{Name: "grant_type", Type: field.TypeString},
+		{Name: "redirect_uri", Type: field.TypeString},
+		{Name: "created_at", Type: field.TypeTime},
+		{Name: "updated_at", Type: field.TypeTime},
+		{Name: "deleted", Type: field.TypeBool, Default: false},
 	}
-	// AuthorizesTable holds the schema information for the "authorizes" table.
-	AuthorizesTable = &schema.Table{
-		Name:       "authorizes",
-		Columns:    AuthorizesColumns,
-		PrimaryKey: []*schema.Column{AuthorizesColumns[0]},
+	// AuthorizeTable holds the schema information for the "authorize" table.
+	AuthorizeTable = &schema.Table{
+		Name:       "authorize",
+		Columns:    AuthorizeColumns,
+		PrimaryKey: []*schema.Column{AuthorizeColumns[0]},
 	}
 	// Tables holds all the tables in the schema.
 	Tables = []*schema.Table{
-		AuthorizesTable,
+		AuthorizeTable,
 	}
 )
 
 func init() {
+	AuthorizeTable.Annotation = &entsql.Annotation{
+		Table: "authorize",
+	}
 }
