# internal/server/http.go
@@ -1,7 +1,7 @@
 package server
 
 import (
-	v1 "teslatrack/api/helloworld/v1"
+	v1 "teslatrack/api/teslatrack/v1"
 	"teslatrack/internal/conf"
 	"teslatrack/internal/service"
 
@@ -12,7 +12,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, redirector *Redirector, greeter *service.GreeterService, logger log.Logger) *kratoshttp.Server {
+func NewHTTPServer(c *conf.Server, redirector *Redirector, greeter *service.GreeterService, authorize *service.AuthorizeService, logger log.Logger) *kratoshttp.Server {
 	var opts = []kratoshttp.ServerOption{
 		kratoshttp.Middleware(
 			recovery.Recovery(),
@@ -31,7 +31,8 @@ func NewHTTPServer(c *conf.Server, redirector *Redirector, greeter *service.Gree
 	}
 
 	srv := kratoshttp.NewServer(opts...)
-	v1.RegisterGreeterHTTPServer(srv, greeter)
+	// v1.RegisterGreeterHTTPServer(srv, greeter)
+	v1.RegisterAuthorizeHTTPServer(srv, authorize)
 
 	return srv
 }
